--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,17 @@ body {
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 25px;
-    color: rgb(57, 57, 57);
+    color: rgb(193, 192, 192);
     background:  rgb(0, 0, 0);
     text-align: center;
     padding: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background: yellow
+    background: rgb(157, 87, 117);
 }
 
 /* Overall page formatting */
 * {
-    background: yellow;
+    background: rgb(157, 87, 117);
 }
 
 /* Base Container Div Class formatting */
@@ -22,7 +22,7 @@ body {
     font-size: 18px;
     text-align: center;
     border: 2px solid black;
-    background: linear-gradient(orange, red);
+    background: linear-gradient(rgb(139, 0, 60), rgb(137, 3, 86));
     padding: 20px;
     font-weight: bold;
 }
@@ -40,10 +40,9 @@ body {
     padding: 10px;
     padding-right: 20px;
     width: 350px;
-    height: 350px;
     margin: 15px;
     border-width: 3px;
-    background: linear-gradient(orange, red)
+    background: linear-gradient(rgb(137, 3, 86), rgb(139, 0, 60))
 }
 
 /* flex-wrap container title formatting */
@@ -66,6 +65,7 @@ ul, li, a {
     background: none;
 }
 
+/* Link Hovering Color Change */
 a:hover {
     color: blue;
 }
